--- a/public/lobby/lobby.html
+++ b/public/lobby/lobby.html
@@ -3,7 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../../public/lobby/styles/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -11,7 +17,16 @@
       <button id = "Log_Out">LogOut</button>
       <hr />
       <h3>Пользователи</h3>
+        Количество записей на страницу :
+        <select id="count_per_page">
+          <option>3</option>
+          <option>5</option>
+          <option>10</option>
+        </select>
       <div id = "gamelist"></div>
+      <div id="pad_block">
+        <ul class="pagination" id="pagination"></ul>
+      </div>
     </div>
     <script src="../../public/lobby/js/lobby.js"></script>
   </body>
