--- a/public/lobby/lobby.html
+++ b/public/lobby/lobby.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../../public/lobby/js/getTime.JS"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../../public/lobby/styles/style.css" />
     <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
   />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
@@ -15,6 +17,15 @@
     <div class="container">
       <h3 id="user-info"></h3>
       <button id = "Log_Out">LogOut</button>
+      <br>
+      Посещение с данного устройства:
+      <div id="counter">
+        <p id = "count-text"></p>
+        </div>
+
+      <br>
+      Текущая дата
+      <p id = "currdate"></p>
       <hr />
       <h3>Пользователи</h3>
         Количество записей на страницу :
@@ -29,5 +40,7 @@
       </div>
     </div>
     <script src="../../public/lobby/js/lobby.js"></script>
+    <script src="../../public/lobby/js/counter.js"></script>
+    <script src="../../public/lobby/js/date.js"></script>
   </body>
 </html>
