--- a/public/lobby/lobby.html
+++ b/public/lobby/lobby.html
@@ -26,6 +26,12 @@
       <br>
       Текущая дата
       <p id = "currdate"></p>
+      <br>
+      Время генерации HTML 
+      <p id = "genTime"></p>
+      <hr />
+      Вы с нами уже:
+      <p id = "regTime"></p>
       <hr />
       <h3>Пользователи</h3>
         Количество записей на страницу :
