--- a/public/register/register.html
+++ b/public/register/register.html
@@ -6,46 +6,51 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-      <div class="container">
-        <h1>Register</h1>
-        <p>Please fill in this form to create an account.</p>
-        <hr />
-        <p id="error_msg" style="color:red"> </p>
+    <div class="container">
+      <h1>Register</h1>
+      <p>Please fill in this form to create an account.</p>
+      <hr />
+      <p id="error_msg" style="color: red"></p>
 
-        <label for="login"><b>Login</b></label>
-        <input type="text"           id = "login" placeholder="Enter Login" name="login" required />
+      <label for="login"><b>Login</b></label>
+      <input
+        type="text"
+        id="login"
+        placeholder="Enter Login"
+        name="login"
+        required
+      />
 
-        <label for="psw"><b>Password</b></label>
-        <input
-          type="password"
-          id = "password"
-          placeholder="Enter Password"
-          name="psw"
-          required
-        />
+      <label for="psw"><b>Password</b></label>
+      <input
+        type="password"
+        id="password"
+        placeholder="Enter Password"
+        name="psw"
+        required
+      />
 
-        <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input
-          type="password"
-          placeholder="Repeat Password"
-          id = "psw-repeat"
-          name="psw-repeat"
-          required
-        />
-        <hr />
-        <p>
-          By creating an account you agree to our
-          <a href="#">Terms & Privacy</a>.
-        </p>
+      <label for="psw-repeat"><b>Repeat Password</b></label>
+      <input
+        type="password"
+        placeholder="Repeat Password"
+        id="psw-repeat"
+        name="psw-repeat"
+        required
+      />
+      <hr />
+      <p>
+        By creating an account you agree to our
+        <a href="#">Terms & Privacy</a>.
+      </p>
 
-        <button  id="regbutton" class="registerbtn">
-          Register
-        </button>
-      </div>
+      <button id="regbutton" class="registerbtn">Register</button>
+      <script src="https://www.google.com/recaptcha/api.js?render=6LfR8n0aAAAAAArhkIsAhop8XexQzefcDqeJMpH5"></script>
+    </div>
 
-      <div class="container signin">
-        <p>Already have an account? <a href="#">Sign in</a>.</p>
-      </div>
+    <div class="container signin">
+      <p>Already have an account? <a href="#">Sign in</a>.</p>
+    </div>
     <script src="../../public/register/js/register.js"></script>
   </body>
 </html>
